force-app/main/default/objects/Case/fields/PGi_Conference__c.field-meta.xml
<CustomField>
    <fullName>PGi_Conference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PGi Conference</label>
    <referenceTo>PGi_Conference__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>