force-app/main/default/objects/Case/fields/PGi_Entity__c.field-meta.xml
<CustomField>
    <fullName>PGi_Entity__c</fullName>
    <formula>PGi_Company__r.PGi_Entity_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PGi Entity</label>
    <type>Text</type>
</CustomField>