force-app/main/default/objects/Case/fields/PGi_Locations__c.field-meta.xml
<CustomField>
    <fullName>PGi_Locations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PGi Locations</label>
    <referenceTo>Locations__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>