force-app/main/default/objects/Case/fields/PGi_or_Vendor_at_Fault__c.field-meta.xml
<CustomField>
    <fullName>PGi_or_Vendor_at_Fault__c</fullName>
    <label>PGi/Vendor at Fault?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>