force-app/main/default/objects/Case/fields/Phone_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Device_Type__c</fullName>
    <description>UCaaS</description>
    <label>UC Connection Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desk Phone</fullName>
                <label>UC Desk Phone</label>
            </value>
            <value>
                <fullName>GM Desktop App</fullName>
            </value>
            <value>
                <fullName>Mobile Device</fullName>
                <label>Mobile App</label>
            </value>
            <value>
                <fullName>Unknown/Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>