force-app/main/default/objects/Case/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>UCaaS</description>
    <label>UC Phone Number/Extension</label>
    <type>Phone</type>
</CustomField>