force-app/main/default/objects/Case/fields/Phone_Number_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Extension__c</fullName>
    <description>UCaaS</description>
    <label>Phone Number Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>