force-app/main/default/objects/Case/fields/Phone_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Phone_Numbers__c</fullName>
    <inlineHelpText>If over 50 phone numbers, please attach list and check the &quot;List Attached&quot; checkbox field.</inlineHelpText>
    <label>Phone Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>