force-app/main/default/objects/Case/fields/Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type__c</fullName>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Landline</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>OnNet</fullName>
            </value>
            <value>
                <fullName>PBX</fullName>
            </value>
            <value>
                <fullName>Soft Phone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>