force-app/main/default/objects/Case/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <inlineHelpText>Operating System or platform the customer is on.</inlineHelpText>
    <label>OS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Linux</fullName>
            </value>
            <value>
                <fullName>Mac OS</fullName>
            </value>
            <value>
                <fullName>Win2k</fullName>
            </value>
            <value>
                <fullName>Windows 10</fullName>
            </value>
            <value>
                <fullName>Windows 7</fullName>
            </value>
            <value>
                <fullName>Windows 8</fullName>
            </value>
            <value>
                <fullName>Windows Vista</fullName>
            </value>
            <value>
                <fullName>Windows XP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>