force-app/main/default/objects/Case/fields/Player_Type__c.field-meta.xml
<CustomField>
    <fullName>Player_Type__c</fullName>
    <label>Player Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>