force-app/main/default/objects/Case/fields/Pop_Up_Blocker__c.field-meta.xml
<CustomField>
    <fullName>Pop_Up_Blocker__c</fullName>
    <label>Pop Up Blocker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Not Enabled</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>