force-app/main/default/objects/Case/fields/Port_Type__c.field-meta.xml
<CustomField>
    <fullName>Port_Type__c</fullName>
    <label>Port Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Full Port</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>