force-app/main/default/objects/Case/fields/Portability_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Portability_Indicator__c</fullName>
    <label>Portability Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wireline to Wireline</fullName>
            </value>
            <value>
                <fullName>Wireless to Wireline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>