force-app/main/default/objects/Case/fields/Pre_Invoice_Request__c.field-meta.xml
<CustomField>
    <fullName>Pre_Invoice_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Invoice Request</label>
    <type>Checkbox</type>
</CustomField>