force-app/main/default/objects/Case/fields/Precision__c.field-meta.xml
<CustomField>
    <fullName>Precision__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precision</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>