force-app/main/default/objects/Case/fields/Priority_Gauge__c.field-meta.xml
<CustomField>
    <fullName>Priority_Gauge__c</fullName>
    <formula>IMAGE( 
CASE(Priority, 
&quot;Low&quot;, &quot;/img/samples/stars_100.gif&quot;,
&quot;Medium&quot;, &quot;/img/samples/stars_200.gif&quot;,
&quot;High&quot;, &quot;/img/samples/stars_300.gif&quot;,
&quot;Very High&quot;, &quot;/img/samples/stars_400.gif&quot;,
&quot;/img/samples/stars_500.gif&quot;), 
&quot;Priority Flag&quot;, 20, 90)</formula>
    <label>Priority Gauge</label>
    <type>Text</type>
</CustomField>