force-app/main/default/objects/Case/fields/Problem_Review_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Problem_Review_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Problem Review Ticket</label>
    <referenceTo>Problem_Review_Ticket__c</referenceTo>
    <relationshipLabel>Cases (Incident / PTA / PTN)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>