force-app/main/default/objects/Case/fields/Problem_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Problem_Ticket_Number__c</fullName>
    <label>Problem Ticket Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>