force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>*Non-Product/Consultative</fullName>
            </value>
            <value>
                <fullName>ACT Automated Audio</fullName>
            </value>
            <value>
                <fullName>ACT Reserved Audio</fullName>
            </value>
            <value>
                <fullName>ACT Webcast</fullName>
            </value>
            <value>
                <fullName>Adobe Connect</fullName>
            </value>
            <value>
                <fullName>Adobe - Outlook Toolbar</fullName>
            </value>
            <value>
                <fullName>Cisco Jabber</fullName>
            </value>
            <value>
                <fullName>Direct Number Room</fullName>
            </value>
            <value>
                <fullName>Event Conferencing</fullName>
            </value>
            <value>
                <fullName>Event Portal</fullName>
            </value>
            <value>
                <fullName>GlobalMeet</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Admin Portal (Conf. HUB)</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Audio</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Audio for Skype (GMSO)</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Audio for Skype for Business Online</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Audio for Skype Server</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Audio NA</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Audio NA - Scheduled</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Click to Join</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Collaboration</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Desktop (Legacy)</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Desktop App</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - for Microsoft Teams</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Greeted Entry</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Greeted Entry Connection</fullName>
            </value>
            <value>
                <fullName>GlobalMeet India - Audio</fullName>
            </value>
            <value>
                <fullName>GlobalMeet India - Web</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Mobile App (Android)</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Mobile App (iPad)</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Mobile App (iPhone)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>