force-app/main/default/objects/Case/fields/Product_Amount__c.field-meta.xml
<CustomField>
    <fullName>Product_Amount__c</fullName>
    <formula>Account.Active_Order_Licensed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>