force-app/main/default/objects/Case/fields/Product_Contact__c.field-meta.xml
<CustomField>
    <fullName>Product_Contact__c</fullName>
    <description>Product Contact for the engineering issue.</description>
    <inlineHelpText>Product Contact for the engineering issue.</inlineHelpText>
    <label>Product Contact</label>
    <length>25</length>
    <type>Text</type>
</CustomField>