force-app/main/default/objects/Case/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <inlineHelpText>If known</inlineHelpText>
    <label>Project Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>