force-app/main/default/objects/Case/fields/Q_C_Partner__c.field-meta.xml
<CustomField>
    <fullName>Q_C_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Q/C Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QC_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>