force-app/main/default/objects/Case/fields/RA_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>RA_Master_ID__c</fullName>
    <label>RA Master ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>