force-app/main/default/objects/Case/fields/RecommendationofImprovement__c.field-meta.xml
<CustomField>
    <fullName>RecommendationofImprovement__c</fullName>
    <label>Recommendation of Improvement</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>