force-app/main/default/objects/Case/fields/Recording_Replay_Email__c.field-meta.xml
<CustomField>
    <fullName>Recording_Replay_Email__c</fullName>
    <label>Recording Replay Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Has Received Replay Email</fullName>
            </value>
            <value>
                <fullName>Client Has Not Received Replay Email</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>