force-app/main/default/objects/Case/fields/Recording_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Recording_Start_Date_Time__c</fullName>
    <label>Recording Start Date/Time</label>
    <type>DateTime</type>
</CustomField>