force-app/main/default/objects/Case/fields/Recording_Started_Via__c.field-meta.xml
<CustomField>
    <fullName>Recording_Started_Via__c</fullName>
    <label>Recording Started Via</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>*22</fullName>
            </value>
            <value>
                <fullName>Web Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>