force-app/main/default/objects/Case/fields/Recording_Type__c.field-meta.xml
<CustomField>
    <fullName>Recording_Type__c</fullName>
    <label>Recording Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web Only</fullName>
            </value>
            <value>
                <fullName>Audio Only</fullName>
            </value>
            <value>
                <fullName>Audio and Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>