force-app/main/default/objects/Case/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>APAC - North</fullName>
            </value>
            <value>
                <fullName>APAC - South</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>