force-app/main/default/objects/Case/fields/Related_RFC__c.field-meta.xml
<CustomField>
    <fullName>Related_RFC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related RFC</label>
    <referenceTo>Request_for_Change__c</referenceTo>
    <relationshipLabel>Work Task Cases</relationshipLabel>
    <relationshipName>RFC_Task_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>