force-app/main/default/objects/Case/fields/RelatedContractRequest__c.field-meta.xml
<CustomField>
    <fullName>RelatedContractRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please populate the Contract Number, located in the upper left hand corner of your PGi Contract record in Salesforce.</inlineHelpText>
    <label>Related PGi Contract #</label>
    <referenceTo>CONMAN_Contract__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>