force-app/main/default/objects/Case/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>***Pixie Dust Items***</fullName>
            </value>
            <value>
                <fullName>CHAT/EML-ADMIN</fullName>
            </value>
            <value>
                <fullName>CHAT/EML - Elsa</fullName>
            </value>
            <value>
                <fullName>CHAT/EML - Hera</fullName>
            </value>
            <value>
                <fullName>PGIKNOW</fullName>
            </value>
            <value>
                <fullName>PGIKNOW - ServiceNow KB Migration</fullName>
            </value>
            <value>
                <fullName>SS/COMM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>