force-app/main/default/objects/Case/fields/Report_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Request_Type__c</fullName>
    <label>Report Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ad-Hoc Report</fullName>
            </value>
            <value>
                <fullName>ETL Changes</fullName>
            </value>
            <value>
                <fullName>Lookups</fullName>
            </value>
            <value>
                <fullName>Need a Report</fullName>
            </value>
            <value>
                <fullName>New Reseller Feed</fullName>
            </value>
            <value>
                <fullName>PGi BI Permissions and Folders Access</fullName>
            </value>
            <value>
                <fullName>Problem with Existing Report</fullName>
            </value>
            <value>
                <fullName>Review/Modify Report Distribution</fullName>
            </value>
            <value>
                <fullName>Resend of Automated Report</fullName>
            </value>
            <value>
                <fullName>Resend CDR Feed Traffic to Resellers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>