force-app/main/default/objects/Case/fields/Report_Specifics__c.field-meta.xml
<CustomField>
    <fullName>Report_Specifics__c</fullName>
    <label>Report Specifics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved Charged to Customer</fullName>
            </value>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Tied to a Larger Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>