force-app/main/default/objects/Case/fields/ReportIssueDescription__c.field-meta.xml
<CustomField>
    <fullName>ReportIssueDescription__c</fullName>
    <label>Report/Issue Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>