force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business analysis</fullName>
            </value>
            <value>
                <fullName>Cancellation Fee Review / Approval</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Contract question</fullName>
            </value>
            <value>
                <fullName>Custom contract</fullName>
            </value>
            <value>
                <fullName>Custom pricing</fullName>
            </value>
            <value>
                <fullName>Data CleanUp</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Enterprise and Company</fullName>
            </value>
            <value>
                <fullName>Free Trial Non Standard Request</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>iContract</fullName>
            </value>
            <value>
                <fullName>MBP exemption</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Pricing clarification (For Sales)</fullName>
            </value>
            <value>
                <fullName>Quotation or Contract Account History</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>RFQ</fullName>
            </value>
            <value>
                <fullName>SaaS Conversion Request</fullName>
            </value>
            <value>
                <fullName>Security Questionnaire</fullName>
            </value>
            <value>
                <fullName>Special Pricing / Contract Approval</fullName>
            </value>
            <value>
                <fullName>Special Project</fullName>
            </value>
            <value>
                <fullName>Strategic pricing request</fullName>
            </value>
            <value>
                <fullName>Supplier Info form</fullName>
            </value>
            <value>
                <fullName>System CleanUp</fullName>
            </value>
            <value>
                <fullName>User Account  / Training request</fullName>
            </value>
            <value>
                <fullName>WIN$ or tool error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>