force-app/main/default/objects/Case/fields/Requested_For__c.field-meta.xml
<CustomField>
    <fullName>Requested_For__c</fullName>
    <inlineHelpText>This will default to the email of the person entering the request.  If this request is for a different PGi Associate please change this to their email address.</inlineHelpText>
    <label>Requested For</label>
    <type>Email</type>
</CustomField>