force-app/main/default/objects/Case/fields/RequestingDepartment__c.field-meta.xml
<CustomField>
    <fullName>RequestingDepartment__c</fullName>
    <label>Requesting Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Care (Care System Admins)</fullName>
            </value>
            <value>
                <fullName>Care (Quality Control)</fullName>
            </value>
            <value>
                <fullName>Client Success Managers</fullName>
            </value>
            <value>
                <fullName>CRM Operations (SELF)</fullName>
            </value>
            <value>
                <fullName>Finance/Billing</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>IST/Provisioning</fullName>
            </value>
            <value>
                <fullName>IT Support Groups</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Pricing/Deal Desk</fullName>
            </value>
            <value>
                <fullName>Product/Solutions</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>