force-app/main/default/objects/Case/fields/Requestor_s_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Requestor_s_Phone_Number__c</fullName>
    <label>Requestor&apos;s Phone Number</label>
    <type>Phone</type>
</CustomField>