force-app/main/default/objects/Case/fields/RequestorsEmail__c.field-meta.xml
<CustomField>
    <fullName>RequestorsEmail__c</fullName>
    <label>Requestor&#39;s Email</label>
    <type>Email</type>
</CustomField>