force-app/main/default/objects/Case/fields/Reservation_Number__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Number__c</fullName>
    <description>Reservation number associated with Op-assist call. This should be entered when audio case is opened.</description>
    <inlineHelpText>Reservation number associated with Op-assist call. This should be entered when audio case is opened.</inlineHelpText>
    <label>Reservation Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>