force-app/main/default/objects/Case/fields/Resolution_Code__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Code__c</fullName>
    <label>Resolution Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Account Not Deactivated</fullName>
            </value>
            <value>
                <fullName>Account Set Up Without Approval</fullName>
            </value>
            <value>
                <fullName>Account Setup Incorrect</fullName>
            </value>
            <value>
                <fullName>Bad Service</fullName>
            </value>
            <value>
                <fullName>Below Billable Threshold</fullName>
            </value>
            <value>
                <fullName>Billed To Wrong Account</fullName>
            </value>
            <value>
                <fullName>Billing Errors</fullName>
            </value>
            <value>
                <fullName>CDR Issues</fullName>
            </value>
            <value>
                <fullName>Charged at Incorrect Rates</fullName>
            </value>
            <value>
                <fullName>Client Paying Wrong Vendor/Account</fullName>
            </value>
            <value>
                <fullName>Client Support issues</fullName>
            </value>
            <value>
                <fullName>Commercial Negotiation</fullName>
            </value>
            <value>
                <fullName>Conference Cancellation Fee</fullName>
            </value>
            <value>
                <fullName>Conferencing Equipment</fullName>
            </value>
            <value>
                <fullName>Credit / Rebill</fullName>
            </value>
            <value>
                <fullName>Credit Adjustment</fullName>
            </value>
            <value>
                <fullName>CSA Cancel Penalty</fullName>
            </value>
            <value>
                <fullName>CSA Cancellation</fullName>
            </value>
            <value>
                <fullName>Dropped Call</fullName>
            </value>
            <value>
                <fullName>Fraudulent Conference Call</fullName>
            </value>
            <value>
                <fullName>Free Trial Adjustment</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Incorrect Account Set-up</fullName>
            </value>
            <value>
                <fullName>Internal Usage</fullName>
            </value>
            <value>
                <fullName>Invoice Min./Paper fee cut-off time gap</fullName>
            </value>
            <value>
                <fullName>Manual Billing Error</fullName>
            </value>
            <value>
                <fullName>MetraTech Billing Error</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Adjustment</fullName>
            </value>
            <value>
                <fullName>Monthly Minimum Charge Shortfall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>