force-app/main/default/objects/Case/fields/Resolve_Color_Field__c.field-meta.xml
<CustomField>
    <fullName>Resolve_Color_Field__c</fullName>
    <formula>IF(IsClosed || TEXT(Status) = &apos;Pending Client Info/Action&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0151B000002xQT9&quot;, &quot;Grey&quot;),
			IF(((Scheduled_Resolve_Time__c - NOW()) * 24)  / Hours_to_Resolve_SLA__c &lt;= 0,IMAGE(&quot;/servlet/servlet.FileDownload?file=0151B000002xQTB&quot;, &quot;Red&quot;),
IF(((Scheduled_Resolve_Time__c - NOW()) * 24) / Hours_to_Resolve_SLA__c &gt; 0.50,IMAGE(&quot;/servlet/servlet.FileDownload?file=0151B000002xQT8&quot;, &quot;Green&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0151B000002xQTA&quot;, &quot;Yellow&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolve Color Field</label>
    <type>Text</type>
</CustomField>