force-app/main/default/objects/Case/fields/Resolve_Pause_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolve_Pause_Time__c</fullName>
    <label>Resolve Pause Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>