force-app/main/default/objects/Case/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <label>Resolved</label>
    <type>DateTime</type>
</CustomField>