force-app/main/default/objects/Case/fields/Resolved_OLA__c.field-meta.xml
<CustomField>
    <fullName>Resolved_OLA__c</fullName>
    <formula>IF((Resolved__c -  Restored__c)*1440*60 - IF(ISNULL(Total_Paused_Time__c),0, Total_Paused_Time__c) &gt; 0, 
/* days */ 
TEXT(FLOOR(((Resolved__c - Restored__c)*1440*60 - (IF(ISNULL(Total_Paused_Time__c),0, Total_Paused_Time__c)))/86400)) + 
&quot;:&quot; + 
/* hours */ 
TEXT( FLOOR(MOD(((Resolved__c -  Restored__c)*1440*60 - (IF(ISNULL(Total_Paused_Time__c),0, Total_Paused_Time__c))),86400)/3600)) + 
&quot;:&quot; + 
/* minutes */ 
TEXT(FLOOR(MOD(((Resolved__c -  Restored__c)*1440*60 - (IF(ISNULL(Total_Paused_Time__c),0, Total_Paused_Time__c))),3600)/60)), &#39;&#39;)</formula>
    <inlineHelpText>Difference between the time the Service Restored check box was checked and the status was changed to Resolved (minus the time the case was in a Pending Client Action/Info Status)</inlineHelpText>
    <label>Resolved OLA</label>
    <type>Text</type>
</CustomField>