force-app/main/default/objects/Case/fields/Resolved_Queue__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Queue__c</fullName>
    <label>Resolved Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>