force-app/main/default/objects/Case/fields/Restore_Color_Field__c.field-meta.xml
<CustomField>
    <fullName>Restore_Color_Field__c</fullName>
    <formula>IF(TEXT(Status) = &#39;Pending Client Info/Action&#39; || Restore_Pause_Time__c &lt;&gt; &quot;&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0151B000002xQT9&quot;, &quot;Grey&quot;),			
			IF(((Scheduled_Restore_Time__c - NOW()) * 24)  / Hours_to_Restore_SLA__c &lt;= 0,IMAGE(&quot;/servlet/servlet.FileDownload?file=0151B000002xQTB&quot;, &quot;Red&quot;),
IF(((Scheduled_Restore_Time__c - NOW()) * 24) / Hours_to_Restore_SLA__c &gt; 0.50,IMAGE(&quot;/servlet/servlet.FileDownload?file=0151B000002xQT8&quot;, &quot;Green&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0151B000002xQTA&quot;, &quot;Yellow&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restore Color Field</label>
    <type>Text</type>
</CustomField>