force-app/main/default/objects/Case/fields/Restore_Pause_Time__c.field-meta.xml
<CustomField>
    <fullName>Restore_Pause_Time__c</fullName>
    <label>Restore Pause Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>